--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,7 +8,6 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
@@ -51,9 +50,10 @@
 }
 
 .walletButtons {
-    margin-top: 1.5rem;
-    display: flex;
-    gap: 2rem;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  display: flex;
+  gap: 2rem;
 }
 
 .description {
